--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "ethereum-waffle": "^3.0.2",
     "ethers": "^5.0.8",
     "hardhat": "^2.6.8",
+    "hardhat-contract-sizer": "^2.8.0",
     "hardhat-typechain": "^0.3.5",
     "hardhat-watcher": "^2.1.1",
     "is-svg": "^4.3.1",
