--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
   "publishConfig": {
     "access": "public"
   },
-  "version": "1.0.1",
+  "version": "1.0.2",
   "homepage": "https://ethaf.xyz",
   "keywords": [
     "ethaf",
-    "periphery",
-    "v3"
+    "periphery"
   ],
   "repository": {
     "type": "git",
